# gaze-livemeter

./: README.md
backend/: README.md  pyproject.toml
backend/gaze_estimation/: estimate.py
backend/stimulus/: generate.py
backend_dummy/: requirements.txt  server_stub_http.py  start_server.sh
webview/: app.js  index.html  styles.css
